# filemanager

./: .gitignore  CMakeLists.txt
src/: .controller.cpp.swp  .controller.h.swp  .panel.cpp.swp  .panel.h.swp  .panel_view.cpp.swp  .panel_view.h.swp  .status_bar.cpp.swp  .status_bar.h.swp  .view.cpp.swp  .view.h.swp  app.cpp  app.h  command.cpp  command.h  command_bar.cpp  command_bar.h  controller.cpp  controller.h  copy_operation.cpp  copy_operation.h  delete_operation.cpp  delete_operation.h  file_entry.cpp  file_entry.h  file_guard.cpp  file_guard.h  mkdir_operation.cpp  mkdir_operation.h  move_operation.cpp  move_operation.h  operation.h  panel.cpp  panel.h  panel_view.cpp  panel_view.h  popup.cpp  popup.h  remove_operation.cpp  remove_operation.h  status_bar.cpp  (+5 more)
